fix: home page element spacing

--- a/src/styles/MobileNavbar.module.css
+++ b/src/styles/MobileNavbar.module.css
@@ -53,3 +53,8 @@
 .closed {
     left: -100vw;
 }
+
+.spacer {
+    margin: 10px 0;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
